5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4358/executions/1649_2703.log
== TEST (2019-04-09 18:53:24) 
-- CODE:
var=int(input("Qual a idade:"))

if(var=>18):
	resultado: eleitor
else:
	resultado: nao_eleito
print(resultado.lower())	
   
-- ERROR:
File "XXXX", line 3
    if(var=>18):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:54:05) 
-- CODE:
var=int(input("Qual a idade:"))

if(var>=18):
	resultado: eleitor
else:
	resultado: nao_eleito
print(resultado.lower())	
   
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    resultado: nao_eleito
NameError: name 'nao_eleito' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 18:55:11) 
-- CODE:
var=int(input("Qual a idade:"))

if(var>=18):
	resultado:"eleito"
else:
	resultado:"nao_eleito"
print(resultado.lower())	
   
-- EXECUTION TIME:
0.126929
-- ERROR:
  File "/home/codebench/codes/1649/2703/main.py", line 4
    resultado:"eleito"
             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:55:15) 
-- CODE:
var=int(input("Qual a idade:"))

if(var>=18):
	resultado:"eleito"
else:
	resultado:"nao_eleito"
print(resultado.lower())	
   
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(resultado.lower())	
NameError: name 'resultado' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:55:39) 
-- CODE:
var=int(input("Qual a idade:"))

if(var>=18):
	resultado="eleito"
else:
	resultado="nao_eleito"
print(resultado.lower())	
   
-- OUTPUT:
nao_eleito
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 18:55:52) 
-- CODE:
var=int(input("Qual a idade:"))

if(var>=18):
	resultado="eleito"
else:
	resultado="nao_eleito"
print(resultado.lower())	
   
-- EXECUTION TIME:
0.128716
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleito
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleito
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleito
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:56:51) 
-- CODE:
var=int(input("Qual a idade:"))

if(var>=18):
	resultado="eleito"
else:
	resultado="nao_eleito"
print(resultado.lower())	
   
-- OUTPUT:
nao_eleito
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:57:39) 
-- CODE:
var=int(input("Qual a idade:"))

if(var>=18):
	resultado="eleito"
else:
	resultado="nao_eleito"
print(resultado.lower())	
   
-- OUTPUT:
nao_eleito
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 18:57:54) 
-- CODE:
var=int(input("Qual a idade:"))

if(var>=18):
	resultado="eleito"
else:
	resultado="nao_eleito"
print(resultado.lower())	
   
-- EXECUTION TIME:
0.203786
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleito
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleito
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleito
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 18:58:06) 
-- CODE:
var=int(input("Qual a idade:"))

if(var>=18):
	resultado="eleito"
else:
	resultado="nao_eleito"

print(resultado.lower())	
   
-- EXECUTION TIME:
0.161338
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleito
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleito
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleito
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:58:09) 
-- CODE:
var=int(input("Qual a idade:"))

if(var>=18):
	resultado="eleito"
else:
	resultado="nao_eleito"

print(resultado.lower())	
   
-- OUTPUT:
nao_eleito
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:59:09) 
-- CODE:
var=int(input("Qual a idade:"))

if(var>=18):
	resultado="eleito"
else:
	resultado="nao_eleito"

print(resultado.lower())	
   
-- OUTPUT:
nao_eleito
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 18:59:21) 
-- CODE:
var=int(input("Qual a idade:"))

if(var>=18):
	resultado="eleito"
else:
	resultado="nao_eleito"

print(resultado.lower())	
   
-- EXECUTION TIME:
0.212954
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleito
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleito
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleito
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:59:22) 
-- CODE:
var=int(input("Qual a idade:"))

if(var>=18):
	resultado="eleito"
else:
	resultado="nao_eleito"

print(resultado.lower())	
   
-- OUTPUT:
nao_eleito
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 18:59:56) 
-- CODE:
var=int(input("Qual a idade:"))

if(var>=18):
	resultado="eleitor"
else:
	resultado="nao_eleitor"

print(resultado.lower())	
   
-- EXECUTION TIME:
0.131505
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
